--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.mvc.servlet.path=/api
+
+
 
