--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
 spring.config.import=file:.env[.properties]
 
 spring.application.name=filmmanagement
-# Configuration de la base de données
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/filmmanagement?useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
 
-# Spécifier le driver MySQL
+# Database config
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/filmmanagement?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuration de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
+# Mail config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL_USERNAME}
@@ -31,6 +30,3 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
 
 spring.mvc.servlet.path=/api
-
-
-
